--- a/PopcornApp/app/src/main/res/layout/activity_donation.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_donation.xml
@@ -18,7 +18,6 @@
         android:text="Select the method of payment"
         android:textColor="@color/TextColor"
         android:id="@+id/textViewSelection"
-        android:layout_above="@+id/donation"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="70dp" />
@@ -110,7 +109,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/donationamountEditText"
             android:layout_alignTop="@+id/donationamount"
             android:layout_toRightOf="@+id/radioGroup"
             android:layout_toEndOf="@+id/radioGroup" />
