--- a/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="Finalization"
+                android:text="Order Review"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/TextColor"
@@ -207,43 +207,40 @@
         </TableLayout>
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="Items purchased:"
+            android:textColor="@color/TextColor"
+            android:textSize="@dimen/abc_text_size_headline_material" />
+
+        <ListView
+            android:id="@+id/listView2"
             android:layout_width="wrap_content"
-            android:layout_height="77dp"
-            android:layout_column="0"
+            android:layout_height="123dp"
+            android:layout_gravity="left|top" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Donation Amount: $"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/TextColor"
-            android:textSize="@dimen/abc_text_size_display_1_material" />
+            android:textSize="@dimen/abc_text_size_medium_material" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="83dp"
-            android:gravity="center_horizontal"
-            android:text="Items purchased"
-            android:textColor="@color/TextColor"
-            android:textSize="@dimen/abc_text_size_display_1_material" />
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Total:"
+            android:textAlignment="viewStart"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/TextColor"/>
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/listView2"
-                android:layout_width="wrap_content"
-                android:layout_height="123dp"
-                android:layout_gravity="left|top" />
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Total:"
-                android:textAlignment="viewStart"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <TableRow android:layout_width="fill_parent">
+            <TableRow android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/FinalizationBackButton"
@@ -270,6 +267,5 @@
                     android:onClick="SubmitOrder"
                     android:text="Place Order" />
             </TableRow>
-        </GridLayout>
     </LinearLayout>
 </ScrollView>
