--- a/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
@@ -1,10 +1,12 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/BGColor"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/BGColor"
     tools:context="com.mis478.popcornapp.ScoutGoal">
 
 
@@ -13,98 +15,108 @@
         android:layout_height="fill_parent">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Pack Goal:"
-                android:id="@+id/PackGoalLabel"
-                android:layout_gravity="right"
-                android:layout_marginRight="5dp"
-                android:textColor="@color/TextColor"
-                android:paddingLeft="15dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Personal Goal:"
-                android:id="@+id/PersonalGoalLabel"
-                android:layout_gravity="right"
-                android:layout_marginRight="5dp" android:textColor="@color/TextColor"
-                android:paddingLeft="15dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="$0"
-                android:id="@+id/PackAmt"
-                android:numeric="signed" android:textColor="@color/TextColor"
-                android:paddingLeft="15dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="$15"
-                android:id="@+id/PersonalAmt"
-                android:numeric="integer"  android:textColor="@color/TextColor"
-                android:paddingLeft="15dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/PackGoalLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp"
+                android:paddingLeft="15dp"
+                android:text="Pack Goal:"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+
+            <TextView
+                android:id="@+id/PersonalGoalLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp"
+                android:paddingLeft="15dp"
+                android:text="Personal Goal:"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/PackAmt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numeric="signed"
+                android:paddingLeft="15dp"
+                android:text="$0"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+
+            <TextView
+                android:id="@+id/PersonalAmt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numeric="integer"
+                android:paddingLeft="15dp"
+                android:text="$15"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
             android:layout_weight="5"
-            android:layout_gravity="center">
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Total Sold:"
                 android:id="@+id/TotalSoldAmtLabel"
-                android:layout_gravity="center" android:textColor="@color/TextColor"
-                android:paddingLeft="15dp" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="15dp"
+                android:text="Total Sold:"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="$5"
+                android:textColor="@color/TextColor" />
+
+            <TextView
                 android:id="@+id/TotalSoldAmt"
-                android:layout_gravity="center"  android:textColor="@color/TextColor"
-                android:paddingLeft="15dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="15dp"
+                android:text="$5"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
         </LinearLayout>
 
     </TableRow>
 
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="2"></TableRow>
-
     <ProgressBar
-        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:id="@+id/SaleProgressBar"
+        style="@style/ProgressBarCubScoutTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/SaleProgressBar"
+        android:layout_marginTop="50dp"
         android:minHeight="50dp"
-        android:progress="50"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="50dp" />
+        android:progress="50" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:text="LeaderBoard"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/TextColor"
+        android:textSize="@dimen/abc_text_size_headline_material" />
+
 </TableLayout>
