--- a/PopcornApp/app/src/main/res/layout/denleadermain.xml
+++ b/PopcornApp/app/src/main/res/layout/denleadermain.xml
@@ -93,7 +93,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:paddingTop="30dp">
 
             <Space
                 android:layout_width="wrap_content"
