--- a/PopcornApp/app/src/main/res/layout/activity_donation.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_donation.xml
@@ -1,117 +1,132 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BGColor"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity"
-    android:id="@+id/radio"
-    android:background="@color/BGColor">
+    tools:context="com.mis478.popcornapp.Donation">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Select the method of payment"
-        android:textColor="@color/TextColor"
-        android:id="@+id/textViewSelection"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="70dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/BackBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:clickable="true"
-        android:onClick="ScoutMain"
-        style="@style/ButtonCubScoutTheme"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next"
-        android:id="@+id/SalesNextButton"
-        android:clickable="true"
-        android:onClick="CustInfo"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        style="@style/ButtonCubScoutTheme"/>
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignTop="@+id/textViewSelection"
-        android:layout_centerHorizontal="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="140dp">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="50dp"
+                android:text="Select the Amount and Method of Payment"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Sales Mode"
+                android:id="@+id/SMlbl"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/TextColor"
+                android:paddingLeft="15dp"/>
+
+        </TableRow>
 
         <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioGroup"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="143dp">
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cash"
-                android:textColor="@color/TextColor"
-                android:id="@+id/radioButtonCash"
-                android:layout_above="@+id/radioButtonAnimationMovies"
-                android:layout_alignLeft="@+id/radioButtonAnimationMovies"
-                android:layout_alignStart="@+id/radioButtonAnimationMovies"
-                android:checked="false" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Credit"
-                android:textColor="@color/TextColor"
-                android:id="@+id/radioButtonCredit"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:checked="false" />
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Check"
                 android:id="@+id/radioButtonCheck"
-                android:textColor="@color/TextColor"
-                android:layout_below="@+id/radioButtonAnimationMovies"
-                android:layout_alignLeft="@+id/radioButtonAnimationMovies"
-                android:layout_alignStart="@+id/radioButtonAnimationMovies"
+                style="@style/RadioButtonCubScoutTheme"/>
                 android:checked="false" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cash"
+                android:id="@+id/radioButtonCash"
+                style="@style/RadioButtonCubScoutTheme"/>
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:checked="false" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Credit"
+                android:id="@+id/radioButtonCredit"
+                style="@style/RadioButtonCubScoutTheme"/>
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:checked="false" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                style="@style/EditTextCubScoutTheme"
+                android:id="@+id/editText"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Donation Amount"
+                android:id="@+id/textView" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:weightSum="1">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sales"
+                    android:id="@+id/SalesModeBtn"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:clickable="true"
+                    android:onClick="Sales"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_gravity="bottom" />
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"></TableRow>
+
+                <FrameLayout
+                    android:layout_width="164dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical">
+
+                </FrameLayout>
+
+                <Button
+                    android:layout_width="92dp"
+                    android:layout_height="wrap_content"
+                    android:text="Info"
+                    android:id="@+id/CustomerInfo"
+                    android:onClick="CustInfo"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_gravity="bottom" />
+
+            </TableRow>
+
         </RadioGroup>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Donation Amount: $"
-            android:id="@+id/donationamount"
-            android:textColor="@color/TextColor"
-            android:layout_marginTop="76dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/donationamountEditText"
-            android:layout_alignTop="@+id/donationamount"
-            android:layout_toRightOf="@+id/radioGroup"
-            android:layout_toEndOf="@+id/radioGroup" />
-    </RelativeLayout>
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
